<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_contribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_contribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribution"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/data"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_contribute"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_data_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/data_desc"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_data"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/icon"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_data_desc"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_icon_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingBottom="5dp"
                android:text="@string/icon_desc"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_icon"
                app:layout_constraintLeft_toLeftOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/cv_contribute"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_author_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:paddingBottom="5dp"
                android:text="@string/author_desc"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_author"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_author_desc"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>