<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_province_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingBottom="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/confirm"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                app:layout_constraintTop_toBottomOf="@id/tv_province_name"
                app:layout_constraintRight_toLeftOf="@id/tv_recovered"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/recovered"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                app:layout_constraintTop_toBottomOf="@id/tv_province_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/deaths"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                app:layout_constraintTop_toBottomOf="@id/tv_province_name"
                app:layout_constraintLeft_toRightOf="@id/tv_recovered"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_total_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:paddingTop="5dp"
                app:layout_constraintLeft_toLeftOf="@id/tv_positive"
                app:layout_constraintRight_toRightOf="@id/tv_positive"
                app:layout_constraintTop_toBottomOf="@id/tv_positive" />

            <TextView
                android:id="@+id/tv_total_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:paddingTop="5dp"
                app:layout_constraintLeft_toLeftOf="@id/tv_recovered"
                app:layout_constraintRight_toRightOf="@id/tv_recovered"
                app:layout_constraintTop_toBottomOf="@id/tv_recovered" />

            <TextView
                android:id="@+id/tv_total_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:paddingTop="5dp"
                app:layout_constraintLeft_toLeftOf="@id/tv_deaths"
                app:layout_constraintRight_toRightOf="@id/tv_deaths"
                app:layout_constraintTop_toBottomOf="@id/tv_deaths" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@id/cv_item"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>